# Polos

./: .gitignore  .gitmodules  LICENSE  README.md  install.sh  pyproject.toml  train.sh  validate.sh
configs/: polos-trainer.yaml
configs/xlmr/base/: da-estimator-cvpr.yaml
configs/xlmr/large/: da-estimator.yaml
polos/: cli.py  clip.py  corpora.py  schedulers.py  trainer.py
polos/metrics/: regression_metrics.py
polos/models/: __init__.py  model_base.py  utils.py
polos/models/encoders/: bert.py  encoder_base.py  xlmr.py
polos/models/estimators/: __init__.py  estimator_base.py  polos_estimator.py  quality_estimator.py
polos/models/ranking/: __init__.py  polos_ranker.py  ranking_base.py
polos/modules/: feedforward.py
polos/tokenizers_/: tokenizer_base.py
validate/: clip_score.py  compute_correlations.py  compute_foil.py  compute_pascal50s.py  dataset.py  metrics.py  mid.py  pascal50s.py  utils.py  validate_cvpr.py
